tests/escript/scripts/escript_invalid_import.py.out
Error in script: Syntax Error at line 4 - import from module 'bs4' not allowed
